--- a/src/routes-loader/package.json
+++ b/src/routes-loader/package.json
@@ -4,9 +4,9 @@
   "version": "0.2.0",
   "author": "Forrest <rainforest92@126.com>",
   "main": "./index.js",
-  "repository": "vusion/vue-cli-plugin-vusion",
+  "repository": "vusion/packages",
   "bugs": {
-    "url": "http://github.com/vusion/vue-cli-plugin-vusion/issues"
+    "url": "http://github.com/vusion/packages/issues"
   },
   "scripts": {
     "test": "mocha test/**/*.spec.js"
@@ -16,12 +16,14 @@
     "vusion",
     "vue",
     "webpack",
+    "routes",
     "loader"
   ],
   "tags": [
     "vusion",
     "vue",
     "webpack",
+    "routes",
     "loader"
   ],
   "dependencies": {
