--- a/src/utils/package.json
+++ b/src/utils/package.json
@@ -21,6 +21,9 @@
   "scripts": {
     "build": "babel src -d dist"
   },
+  "dependencies": {
+    "lodash": "^4.17.20"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
